<resources>
    <string name="app_name">AGREMOTE</string>
    <string name="title_all_activity">AGREMOTE</string>
    <string name="sub_title_fragment_light">Light Bulb</string>
    <string name="Bright">Brillo</string>
    <string name="precent">50%</string>
    <string name="sub_title_fragment_humidity">Humedad</string>
    <string name="sub_title_fragment_temperature">Temperature</string>
    <string name="value">54 C°</string>
    <string name="sub_title_fan">Ventiladora</string>
    <string name="speed">Velocidad</string>
    <string name="all">TODO</string>

    <string name="title_light"></string>
    <string name="title_temperature"></string>
    <string name="title_humidity"></string>
    <string name="title_fan"></string>

</resources>