<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/mobile_navigation"
app:startDestination="@+id/navigation_light">

<fragment
    android:id="@+id/navigation_temperature"
    android:name="com.example.agriculturainteligente.ui.temperature.TemperatureFragment"
    android:label="@string/title_temperature"
    tools:layout="@layout/fragment_temperature" />

<fragment
    android:id="@+id/navigation_light"
    android:name="com.example.agriculturainteligente.ui.light.LightFragment"
    android:label="@string/title_light"
    tools:layout="@layout/fragment_light"/>

<fragment
    android:id="@+id/navigation_humidity"
    android:name="com.example.agriculturainteligente.ui.humidity.HumidityFragment"
    android:label="@string/title_humidity"
    tools:layout="@layout/fragment_humidity" />

<fragment
    android:id="@+id/navigation_fan"
    android:name="com.example.agriculturainteligente.ui.fan.FanFragment"
    android:label="@string/title_fan"/>

</navigation>